--- a/structure/sass/default/global/_defaults.scss
+++ b/structure/sass/default/global/_defaults.scss
@@ -19,14 +19,15 @@ body {
 }
 
 body {
-  color: var(--clr-black);
+  background-color: $clr-white;
+  font-family     : -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight     : 400;
+  line-height     : 1.6;
 
-  font-family: var(--ff-sans);
-  font-weight: var(--fw-n);
-  line-height: 1.6;
-  display    : flex;
-  flex-flow  : column nowrap;
-  overflow-x : hidden;
+  display  : flex;
+  flex-flow: column nowrap;
+
+  overflow-x: hidden;
 }
 
 img {
@@ -35,18 +36,43 @@ img {
   height : auto;
 }
 
+figure {
+  border-radius: var(--br);
+  @include padding(2rem null 1rem);
+
+  img {
+    max-height   : 450px;
+    border-radius: var(--br);
+    box-shadow   : var(--bs);
+    object-fit   : cover;
+  }
+
+  figcaption {
+    color      : var(--clr-dark);
+    font-size  : .8rem;
+    font-style : italic;
+    font-weight: 300;
+    margin-top : .25rem !important;
+    text-align : center;
+  }
+}
+
 p {
   @include margin(1rem null null null);
 }
 
+.element__title+p {
+  @include margin(1rem null null null);
+}
+
 a {
-  color          : $clr-dark-text;
-  text-decoration: none;
+  color          : var(--clr-dark);
+  // text-decoration: none;
 
   transition: all 250ms ease;
 
   &:hover {
-    color: $clr-accent;
+    color: var(--clr-accent);
   }
 }
 
@@ -56,11 +82,10 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--ff-serif);
-  font-weight: var(--fw-m);
-  margin     : 0;
-  line-height: 1;
-  color      : var(--clr-accent);
+  font-family   : var(--ff-serif);
+  line-height   : 1.1;
+  color         : $clr-accent;
+  text-transform: capitalize;
 }
 
 h1 {
@@ -87,70 +112,38 @@ h6 {
   font-size: 1rem;
 }
 
-section {
-  @include padding(5rem null);
-  @include margin(0rem null null);
+main {
+  @include padding(#{$nav-height} null null);
 }
 
 .container {
-  // @include padding(null 2rem);
   @include margin(auto);
-  width    : 100%;
-  max-width: var(--max-width);
+  @include padding(null 2rem);
+  width: 100%;
 
+  display              : grid;
+  grid-template-columns: minmax(1rem, 1fr) minmax(auto, 90ch) minmax(1rem, 1fr);
+
+  main {
+    grid-column: 2 / 3;
+  }
+}
+.hero+.container main{
+  @include margin(0);
+  @include padding(0);
+}
+
+.element {
+  @include margin(1rem null);
+
+  &-title {
+    @include margin(1rem null null null);
+  }
 }
 
 .footer {
   @include margin(auto null null null);
-}
-
-.element {
-  @include padding(2rem null);
-  width  : 100%;
-  display: grid;
-  grid-template-columns:
-    minmax(1rem, 1fr) minmax(auto, 90ch) minmax(1rem, 1fr);
-
-  *+* {
-    @include margin(1.25rem null null null);
-  }
-
-  >* {
-    grid-column: 2;
-  }
-}
-
-.hero+section:first-of-type {
-
-  @include margin(#{$section-margin} null);
-}
-
-.navbar+section:first-of-type {
-
-  margin-top: calc(#{$nav-height} + #{$section-margin});
-}
-
-figure {
-
-  border-radius: var(--br);
-
-
-
-  img {
-    max-height   : 450px;
-    border-radius: var(--br);
-    box-shadow   : var(--bs);
-    object-fit   : cover;
-  }
-
-  figcaption {
-    color      : var(--clr-grey-dark);
-    font-size  : .8rem;
-    font-style : italic;
-    font-weight: 300;
-    margin-top : .25rem !important;
-    text-align : center;
-  }
+  @include padding(3rem null null null);
 }
 
 .text-danger {
@@ -159,5 +152,4 @@ figure {
 
 .span {
   grid-column: 1 / -1 !important;
-
 }
